// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateIndex > Should generate full index 1`] = `
[
  {
    "header": "Content",
    "id": "v-2b30cdfd#content",
    "text": [
      "Here is main content of article.",
      "A",
      "B",
      "C",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
  {
    "id": "v-2b30cdfd",
    "text": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
]
`;

exports[`generateIndex > Should generate full index 2`] = `
[
  {
    "header": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Text",
    "id": "v-1bb9c728#text",
    "text": [
      "This sentence has bold、italic and delete style text.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "text": [
      "This is a paragraph.",
      "This is another paragraph.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Line Break",
    "id": "v-1bb9c728#line-break",
    "text": [
      "I would like to line break at this point",
      "::: tip",
      "In codes above, two spaces are behind at.",
      ":::",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "text": [
      "Blockquotes can also be nested...",
      "...by using greater-than signs right next to each other...",
      "...or with spaces between arrows.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "List",
    "id": "v-1bb9c728#list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "text": [
      "Create a list by starting a line with -",
      "Make sub-lists by indenting 2 spaces:",
      "Marker character change forces new list start:",
      "Ac tristique libero volutpat at",
      "Facilisis in pretium nisl aliquet",
      "Nulla volutpat aliquam velit link break",
      "New paragraph",
      "It’s easy!",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "text": [
      "Lorem ipsum dolor sit amet",
      "Consectetur adipiscing elit line break line break again",
      "Integer molestie lorem at massa",
    ],
    "title": "Heading 1",
  },
  {
    "header": "HR",
    "id": "v-1bb9c728#hr",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Link",
    "id": "v-1bb9c728#link",
    "text": [
      "Home page using absolute path",
      "Home page using relative path",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Image",
    "id": "v-1bb9c728#image",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Emoji",
    "id": "v-1bb9c728#emoji",
    "text": [
      "Classic:",
      "😉 😢 😆 😋",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Tables",
    "id": "v-1bb9c728#tables",
    "text": [
      "center",
      "right",
      "left",
      "For center align use :-:",
      "For right align use -:",
      "For left align use :-",
      "b",
      "aaaaaaaaa",
      "aaaa",
      "c",
      "aaaa",
      "a",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Codes",
    "id": "v-1bb9c728#codes",
    "text": [
      "Inline Code: code",
      "Block code:",
      "Sample text here... ",
      "Syntax highlighting:",
      "var foo = function (bar) { return bar++; }; console.log(foo(5)); ",
    ],
    "title": "Heading 1",
  },
]
`;

exports[`generateIndex > Should generate full index 3`] = `
[
  {
    "id": "v-6e785e10",
    "text": [
      "Markdown content.",
    ],
    "title": "Tag Test",
  },
]
`;

exports[`generateIndex > Should generate full index 4`] = `
[
  {
    "id": "v-40f33c88",
    "text": [
      "Markdown content.",
    ],
    "title": "",
  },
]
`;

exports[`generateIndex > Should generate full index 5`] = `[]`;

exports[`generateIndex > Should generate index 1`] = `
[
  {
    "header": "Content",
    "id": "v-2b30cdfd#content",
    "text": [],
    "title": "Demo Page",
  },
  {
    "id": "v-2b30cdfd",
    "text": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
]
`;

exports[`generateIndex > Should generate index 2`] = `
[
  {
    "header": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Text",
    "id": "v-1bb9c728#text",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Line Break",
    "id": "v-1bb9c728#line-break",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "List",
    "id": "v-1bb9c728#list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "HR",
    "id": "v-1bb9c728#hr",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Link",
    "id": "v-1bb9c728#link",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Image",
    "id": "v-1bb9c728#image",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Emoji",
    "id": "v-1bb9c728#emoji",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Tables",
    "id": "v-1bb9c728#tables",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Codes",
    "id": "v-1bb9c728#codes",
    "text": [],
    "title": "Heading 1",
  },
]
`;

exports[`generateIndex > Should generate index 3`] = `[]`;

exports[`generateIndex > Should generate index 4`] = `[]`;

exports[`generateIndex > Should generate index 5`] = `[]`;

exports[`generateIndex > Should support customFields 1`] = `
[
  {
    "header": "Content",
    "id": "v-2b30cdfd#content",
    "text": [],
    "title": "Demo Page",
  },
  {
    "customFields": {
      "0": [
        "Demo",
      ],
    },
    "id": "v-2b30cdfd",
    "text": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
]
`;

exports[`generateIndex > Should support customFields 2`] = `
[
  {
    "header": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Text",
    "id": "v-1bb9c728#text",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Line Break",
    "id": "v-1bb9c728#line-break",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "List",
    "id": "v-1bb9c728#list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "HR",
    "id": "v-1bb9c728#hr",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Link",
    "id": "v-1bb9c728#link",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Image",
    "id": "v-1bb9c728#image",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Emoji",
    "id": "v-1bb9c728#emoji",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Tables",
    "id": "v-1bb9c728#tables",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Codes",
    "id": "v-1bb9c728#codes",
    "text": [],
    "title": "Heading 1",
  },
]
`;

exports[`generateIndex > Should support customFields 3`] = `
[
  {
    "customFields": {
      "0": [
        "markdown",
      ],
    },
    "id": "v-6e785e10",
    "title": "Tag Test",
  },
]
`;

exports[`generateIndex > Should support customFields 4`] = `
[
  {
    "customFields": {
      "0": [
        "markdown",
      ],
    },
    "id": "v-40f33c88",
    "title": "",
  },
]
`;

exports[`generateIndex > Should support customFields 5`] = `[]`;

exports[`generateIndex > Should support customFields with full index 1`] = `
[
  {
    "header": "Content",
    "id": "v-2b30cdfd#content",
    "text": [
      "Here is main content of article.",
      "A",
      "B",
      "C",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
  {
    "customFields": {
      "0": [
        "Demo",
      ],
    },
    "id": "v-2b30cdfd",
    "text": [
      "Here is article excerpt.",
      "const a = 1; ",
    ],
    "title": "Demo Page",
  },
]
`;

exports[`generateIndex > Should support customFields with full index 2`] = `
[
  {
    "header": "Heading 2",
    "id": "v-1bb9c728#heading-2",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 3",
    "id": "v-1bb9c728#heading-3",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 4",
    "id": "v-1bb9c728#heading-4",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 5",
    "id": "v-1bb9c728#heading-5",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Heading 6",
    "id": "v-1bb9c728#heading-6",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Text",
    "id": "v-1bb9c728#text",
    "text": [
      "This sentence has bold、italic and delete style text.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Paragraph",
    "id": "v-1bb9c728#paragraph",
    "text": [
      "This is a paragraph.",
      "This is another paragraph.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Line Break",
    "id": "v-1bb9c728#line-break",
    "text": [
      "I would like to line break at this point",
      "::: tip",
      "In codes above, two spaces are behind at.",
      ":::",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Blockquotes",
    "id": "v-1bb9c728#blockquotes",
    "text": [
      "Blockquotes can also be nested...",
      "...by using greater-than signs right next to each other...",
      "...or with spaces between arrows.",
    ],
    "title": "Heading 1",
  },
  {
    "header": "List",
    "id": "v-1bb9c728#list",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Unordered List",
    "id": "v-1bb9c728#unordered-list",
    "text": [
      "Create a list by starting a line with -",
      "Make sub-lists by indenting 2 spaces:",
      "Marker character change forces new list start:",
      "Ac tristique libero volutpat at",
      "Facilisis in pretium nisl aliquet",
      "Nulla volutpat aliquam velit link break",
      "New paragraph",
      "It’s easy!",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Ordered List",
    "id": "v-1bb9c728#ordered-list",
    "text": [
      "Lorem ipsum dolor sit amet",
      "Consectetur adipiscing elit line break line break again",
      "Integer molestie lorem at massa",
    ],
    "title": "Heading 1",
  },
  {
    "header": "HR",
    "id": "v-1bb9c728#hr",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Link",
    "id": "v-1bb9c728#link",
    "text": [
      "Home page using absolute path",
      "Home page using relative path",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Image",
    "id": "v-1bb9c728#image",
    "text": [],
    "title": "Heading 1",
  },
  {
    "header": "Emoji",
    "id": "v-1bb9c728#emoji",
    "text": [
      "Classic:",
      "😉 😢 😆 😋",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Tables",
    "id": "v-1bb9c728#tables",
    "text": [
      "center",
      "right",
      "left",
      "For center align use :-:",
      "For right align use -:",
      "For left align use :-",
      "b",
      "aaaaaaaaa",
      "aaaa",
      "c",
      "aaaa",
      "a",
    ],
    "title": "Heading 1",
  },
  {
    "header": "Codes",
    "id": "v-1bb9c728#codes",
    "text": [
      "Inline Code: code",
      "Block code:",
      "Sample text here... ",
      "Syntax highlighting:",
      "var foo = function (bar) { return bar++; }; console.log(foo(5)); ",
    ],
    "title": "Heading 1",
  },
]
`;

exports[`generateIndex > Should support customFields with full index 3`] = `
[
  {
    "customFields": {
      "0": [
        "markdown",
      ],
    },
    "id": "v-6e785e10",
    "text": [
      "Markdown content.",
    ],
    "title": "Tag Test",
  },
]
`;

exports[`generateIndex > Should support customFields with full index 4`] = `
[
  {
    "customFields": {
      "0": [
        "markdown",
      ],
    },
    "id": "v-40f33c88",
    "text": [
      "Markdown content.",
    ],
    "title": "",
  },
]
`;

exports[`generateIndex > Should support customFields with full index 5`] = `[]`;
